# grocy-mealie-scanner

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  pages.yml
design/: Grocy-Mealie-Scanner_all-variants.html  Grocy-Mealie-Scanner_variant-a.html
docs/: DEVICE-API.md  GM67-IMPROVEMENT-PLAN.md  GM67-PROTOCOL-REFERENCE.md  OTA-SIGNING.md  scanner-setup.md
docs/decisions/: 001-scanner-config-via-qr.md
firmware/: BOARD_NOTES.md  CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  api_client.c  api_client.h  api_client_demo.c  board.h  captive_dns.c  captive_dns.h  display.c  display.h  gm67.c  gm67.h  gm67_proto.c  gm67_proto.h  i18n.c  i18n.h  idf_component.yml  main.c  ota_update.c  ota_update.h  provision_qr.c  provision_qr.h  status_led.c  status_led.h  storage.c  storage.h  touch_calibration.h  ui.c  ui.h  ui_fonts.c  ui_fonts.h  wifi_conn.c  wifi_conn.h
firmware/test/: run.sh  test_gm67_demux.c
flash-server/: app.js  flashed.html  index.html  manifest.json  serve.sh  styles.css  sync-bins.sh  watch.sh
scripts/: prepare-signing-key.sh
